# openmolclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS
.github/DISCUSSION_TEMPLATE/: README.md  chemistry-skills.yml  model-providers.yml
.github/ISSUE_TEMPLATE/: config.yml  new-chemistry-skill.yml
.github/workflows/: ci.yml  release.yml
deploy/: modal_app.py
docs/: adding_skills.md  api_contracts.md  chat.md  ci.md  hosted.md  local_install.md  model_providers.md  publishing.md  rdkit_agent_deferred_tools.md  running_remote.md  sync_policy.md  versioning.md  zdr.md
docs/images/demo/: openmolclaw-demo.html
docs/superpowers/plans/: 2026-07-06-rdkit-agent-deferred-tools.md
examples/: README.md  config.local.olmo.yaml  config.openrouter.standard.yaml  config.openrouter.zdr.yaml  config.remote.local.yaml  config.remote.openrouter.zdr.yaml  example_prompts.md  quickstart_workspace.json
licenses/: Flask-BSD-3-Clause.txt  Ketcher-Apache-2.0.txt  Ketcher-NOTICE.txt  RDKit-BSD-3-Clause.txt
scripts/: export_demo_gif.js  install_ci_workflow.sh  install_release_workflow.sh  run_vm.sh
scripts/slurm/: openmolclaw-server.sbatch  tunnel_from_job.sh
src/openmolclaw/: __init__.py  __main__.py  app.py  builtin_tools.py  config.py  privacy.py  rdkit_agent_tools.py
src/openmolclaw/chemistry/: __init__.py  convert.py  lookup.py  rdkit_tools.py  render.py  validate.py
src/openmolclaw/contracts/: __init__.py  checks.py
src/openmolclaw/contracts/data/: pubchem_ethanol.json
src/openmolclaw/harness/: __init__.py  chat.py  defaults.py  executor.py  interfaces.py  router.py  schemas.py  tool_registry.py
src/openmolclaw/harness/providers/: __init__.py  base.py  local.py  openrouter.py
src/openmolclaw/skills/ketcher-local-harness/: SKILL.md
src/openmolclaw/skills/local-model-provider/: SKILL.md
src/openmolclaw/skills/molecule-svg-drawing/: SKILL.md
src/openmolclaw/skills/rdkit-structure-builder/: SKILL.md
src/openmolclaw/skills/router-first-tool-calls/: SKILL.md
src/openmolclaw/skills/workspace-json/: SKILL.md
src/openmolclaw/web/: app.js  chat.js  index.html  style.css
src/openmolclaw/workspace/: __init__.py  aliases.py  serialization.py  state.py
tests/: test_app_chat.py  test_app_endpoints.py  test_app_privacy_endpoint.py  test_chat.py  test_cli.py  test_config_zdr.py  test_contracts_runner.py  test_executor.py  test_extra_tools.py  test_lookup.py  test_openrouter_no_fallback_policy.py  test_openrouter_zdr_endpoint_eval.py  test_openrouter_zdr_provider_policy.py  test_privacy_redaction.py  test_providers.py  test_rdkit_agent_deferred_tools.py  test_rdkit_tools.py  test_remote_runner_templates.py  test_render.py  test_schemas.py  test_skill_registry.py  test_workspace_save_mode.py  test_workspace_state.py
tests/contract/: README.md  binding.py  test_contract.py
tests/contract/expected/: router_decisions.json  schema_decisions.json  smiles_facts.json  workspace_roundtrip.json
tests/contract/fixtures/: router_inputs.json  schema_inputs.json  smiles_inputs.json  workspace_inputs.json
